# self-llm-model

./: .gitignore  README.md  main.py  pyproject.toml
config/: base.yaml  config.py  dev.yaml  prod.yaml  test.yaml
dataset/: llm_dataset.py
eval/: eval_gpt.py
model/: base_layer.py  self_gpt.py
tests/: dataloader_test.py  self_gpt_test.py  test_base_layer.py  test_train_utils.py
trainer/: train_utils.py
