[project]
name = "self-llm-model"
version = "0.1.0"
description = "自己实现一个大模型"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "datasets>=4.5.0",
  "tiktoken>=0.12.0",
  "transformers>=4.57.6",
]

[project.optional-dependencies]
cpu = [
  "torch==2.4.0",
  "torchvision==0.19.0",
]
cu121 = [
  "torch==2.4.0",
  "torchvision==0.19.0",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu121" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu121", extra = "cu121" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu121", extra = "cu121" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

